--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,20 +1,21 @@
 version: 2.1
 orbs:
-  aws-ecr: circleci/aws-ecr@6.1.0
-
-jobs:
-  build-and-push-image:
-    executor:
-      name: aws-ecr/default
-    steps:
-      - aws-ecr/build-and-push-image:
-          account-url: AWS_ECR_ACCOUNT_URL
-          repo: "${AWS_RESOURCE_NAME_PREFIX}"
-          region: AWS_REGION
-          tag: "${CIRCLE_SHA1}"
-
+aws-ecr: circleci/aws-ecr@6.1.0
+aws-ecs: circleci/aws-ecs@0.0.8
 workflows:
-  version: 2
-  build-and-push:
-    jobs:
-      - build-and-push-image:
+build_and_push_image:
+jobs:
+- circleci:
+context: ecr-circleci-context
+- aws-ecr/build-and-push-image:
+region: AWS_REGION
+account-url: AWS_ECR_ACCOUNT_URL
+repo: 'circleci'　# GitHubのリポジトリ名
+tag: "${CIRCLE_SHA1}"
+- aws-ecs/deploy-service-update:
+requires:
+- aws-ecr/build-and-push-image
+family: 'circleci-task'　# ECSのタスク定義名
+cluster-name: 'circleci-container'　# ECSクラスター名
+service-name: 'circleci-service'　# ECSのサービス名
+container-image-name-updates: 'container=seeds-test,tag=${CIRCLE_SHA1}'　# タスク定義で指定しているコンテナ名
