--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,5 +17,5 @@ requires:
 - aws-ecr/build-and-push-image
 family: 'circleci-task'　# ECSのタスク定義名
 cluster-name: 'circleci-container'　# ECSクラスター名
-service-name: 'circleci-service'　# ECSのサービス名
+service-name: 'circleci-survice'　# ECSのサービス名
 container-image-name-updates: 'container=seeds-test,tag=${CIRCLE_SHA1}'　# タスク定義で指定しているコンテナ名
