--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,12 +8,12 @@ jobs:
 - aws-ecr/build-and-push-image:
 region: AWS_REGION
 account-url: AWS_ECR_ACCOUNT_URL
-repo: 'circleci'　# GitHubのリポジトリ名
+repo: 'circleci'
 tag: "${CIRCLE_SHA1}"
 - aws-ecs/deploy-service-update:
 requires:
 - aws-ecr/build-and-push-image
-family: 'circleci-task'　# ECSのタスク定義名
-cluster-name: 'circleci-container'　# ECSクラスター名
-service-name: 'circleci-survice'　# ECSのサービス名
-container-image-name-updates: 'container=seeds-test,tag=${CIRCLE_SHA1}'　# タスク定義で指定しているコンテナ名
+family: 'circleci-task'　
+cluster-name: 'circleci-container'　
+service-name: 'circleci-survice'　
+container-image-name-updates: 'container=seeds-test,tag=${CIRCLE_SHA1}'　
