--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,20 +1,19 @@
 version: 2.1
 orbs:
- aws-ecr: circleci/aws-ecr@6.1.0
- aws-ecs: circleci/aws-ecs@0.0.8
+  aws-ecr: circleci/aws-ecr@0.0.10
+  aws-ecs: circleci/aws-ecs@0.0.8
 workflows:
- build_and_push_image:
-  jobs:
-    - aws-ecr/build-and-push-image:
-      region: AWS_REGION
-      account-url: AWS_ECR_ACCOUNT_URL
-      repo: 'circleci'
-      tag: "${CIRCLE_SHA1}"
-      
-    - aws-ecs/deploy-service-update:
-      requires:
-        - aws-ecr/build-and-push-image
-      family: 'circleci-task'
-      cluster-name: 'circleci-cluster'
-      service-name: 'circleci-survice'
-      container-image-name-updates: 'container=circleci-container,tag=${CIRCLE_SHA1}'　
+  build-and-deploy:
+    jobs:
+      - aws-ecr/build_and_push_image:
+          account-url: "${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com"
+          repo: circleci
+          region: "${AWS_REGION}"
+          tag: "${CIRCLE_SHA1}"
+      - aws-ecs/deploy-service-update:
+          requires:
+            - aws-ecr/build_and_push_image
+          aws-region: ${AWS_REGION}
+          family: "circleci-task"
+          cluster-name: "circleci-cluster"
+          container-image-name-updates: "container=circleci-container,tag=${CIRCLE_SHA1}"
