--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,16 +7,16 @@ workflows:
     jobs:
       - aws-ecr/build_and_push_image:
           context: ecr-circleci-context
-          account-url: "${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com"
-          repo: "${AWS_RESOURCE_NAME_PREFIX}"
-          region: ${AWS_REGION}
+          account-url: "AWS_ACCOUNT_ID.dkr.ecr.AWS_REGION.amazonaws.com"
+          repo: "AWS_RESOURCE_NAME_PREFIX"
+          region: AWS_REGION
           tag: "${CIRCLE_SHA1}"
       - aws-ecs/deploy-service-update:
           context: ecr-circleci-context
           requires:
             - aws-ecr/build_and_push_image
-          aws-region: ${AWS_REGION}
-          family: "${c}-task"
-          cluster-name: "${AWS_RESOURCE_NAME_PREFIX}-cluster"
-          container-image-name-updates: "container=${AWS_RESOURCE_NAME_PREFIX}-conainer,tag=${CIRCLE_SHA1}"
+          aws-region: AWS_REGION
+          family: "AWS_RESOURCE_NAME_PREFIX-task"
+          cluster-name: "AWS_RESOURCE_NAME_PREFIX-cluster"
+          container-image-name-updates: "container=AWS_RESOURCE_NAME_PREFIX-conainer,tag=${CIRCLE_SHA1}"
 
