--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ workflows:
           repo: circleci
           region: AWS_REGION
           tag: latest
-          dockerfile: .circleci/Dockerfile
+          # dockerfile: .circleci/Dockerfile
       - aws-ecs/deploy-service-update:
           context: ecr-circleci-context
           requires:
