--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ workflows:
           account-url: AWS_ECR_ACCOUNT_URL
           repo: circleci
           region: AWS_REGION
-          tag: CIRCLE_SHA1
+          # tag: CIRCLE_SHA1
           # dockerfile: .circleci/Dockerfile
       - aws-ecs/deploy-service-update:
           context: ecr-circleci-context
@@ -19,5 +19,5 @@ workflows:
           aws-region: AWS_REGION
           family: circleci-task
           cluster-name: circleci-cluster
-          container-image-name-updates: container=circleci-conainer,tag=CIRCLE_SHA1
+          container-image-name-updates: container=circleci-conainer #,tag=CIRCLE_SHA1
 
