--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ workflows:
       - aws-ecr/build_and_push_image:
           context: ecr-circleci-context
           account-url: AWS_ECR_ACCOUNT_URL
-          repo: circleci-from-git
+          repo: circleci
           region: AWS_REGION
           tag: latest
           # dockerfile: .circleci/Dockerfile
