--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ workflows:
           account-url: AWS_ECR_ACCOUNT_URL
           repo: circleci
           region: AWS_REGION
-          tag: latest
+          tag: latestt
           # dockerfile: .circleci/Dockerfile
       - aws-ecs/deploy-service-update:
           context: ecr-circleci-context
