--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ workflows:
           requires:
             - aws-ecr/build_and_push_image
           aws-region: AWS_REGION
-          family: circleci-task
+          family: circleci-survice
           cluster-name: circleci-cluster
-          container-image-name-updates: container=circleci-conainer tag=latest
+          container-image-name-updates: container=circleci-conainer tag=latesttttttttt
 
