--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ workflows:
           context: ecr-circleci-context
           requires:
             - aws-ecr/build_and_push_image
-          aws-region: AWS_REGION
+          # aws-region: AWS_REGION
           family: circleci-task
           cluster-name: circleci-cluster
           service-name: circleci-survice
