--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,17 +8,16 @@ workflows:
       - aws-ecr/build_and_push_image:
           context: ecr-circleci-context
           account-url: AWS_ECR_ACCOUNT_URL
-          repo: circleci
+          repo: AWS_RESOURCE_NAME_PREFIX
           region: AWS_REGION
-          tag: latesttttttttt
+          tag: CIRCLE_SHA1
           # dockerfile: .circleci/Dockerfile
       - aws-ecs/deploy-service-update:
           context: ecr-circleci-context
           requires:
             - aws-ecr/build_and_push_image
-          # aws-region: AWS_REGION
-          family: circleci-task
-          cluster-name: circleci-cluster
-          service-name: circleci-survice
-          container-image-name-updates: container=circleci-container, tag=latesttttttttt
+          family: '${AWS_RESOURCE_NAME_PREFIX}-task'
+          cluster-name: '${AWS_RESOURCE_NAME_PREFIX}-cluster'
+          service-name: '${AWS_RESOURCE_NAME_PREFIX}-survice'
+          container-image-name-updates: container='${AWS_RESOURCE_NAME_PREFIX}-container, tag=${CIRCLE_SHA1}'
 
