--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,5 +19,5 @@ workflows:
           family: '${AWS_RESOURCE_NAME_PREFIX}-task'
           cluster-name: '${AWS_RESOURCE_NAME_PREFIX}-cluster'
           service-name: '${AWS_RESOURCE_NAME_PREFIX}-survice'
-          container-image-name-updates: container='${AWS_RESOURCE_NAME_PREFIX}-container, tag=${CIRCLE_SHA1}'
+          container-image-name-updates: 'container=${AWS_RESOURCE_NAME_PREFIX}-container, tag=${CIRCLE_SHA1}'
 
